# drosophila-mb-lateralization

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: reproduce.yml
data/: source_data.sha256
data/source_data/: associative_steering_self_by_seed.csv  associative_steering_stage_contrasts.csv  associative_steering_structural_controls.csv  associative_steering_structural_inventory.csv  banc_external_validation_summary.csv  dpm_29fly_paired_slopes.csv  dpm_5ht_compartment_switch.csv  dpm_5ht_compartment_switch_statistics.json  dpm_batch_aware_statistics.csv  dpm_timecourse_right_left_summary.csv  kc_5ht_classifier_stress_test.csv  kc_5ht_source_filter_sensitivity.csv  kc_5ht_specification_curve.csv  lateralized_steering_contrast_summary.csv  lateralized_steering_mediation.csv  male_cns_mb_route_summary.csv  (+7 more)
docs/: CODE_PROVENANCE.md  DATA_PROVENANCE.md  FULL_REPRODUCTION.md  GRASP_LATERALIZATION_ANALYSIS_CN.md
figures/: external_connectome_validation_statistics.json
scripts/: analyze_dpm_functional_imaging_lateralization.py  analyze_grasp_lateralization.py  analyze_kc_nt_lateralization.py  build_associative_memory_steering.py  build_dpm_compartment_switch.py  build_external_validation.py  build_figures.py  build_model_causal_triangulation.py  run_arbor_slide16_17_glomerulus_combo_compare.py  run_associative_steering.py  run_lateralized_steering.py  validate_source_data.py
tests/: test_associative_steering.py  test_grasp_lateralization.py  test_lateralized_steering.py  test_nt_analysis.py
(+22 files in other folders)
